Solved the issue of the page scalling to the right side where there was a blank space by adding hidden to overflow on the request-main-container div

--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ textarea:focus {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 2rem 2.5rem;
+  margin: 2rem 1.7rem;
   padding: 1rem;
   justify-self: start;
   background: var(--off-white);
@@ -1524,6 +1524,7 @@ textarea:focus {
   flex-direction: column;
   align-items: center;
   gap: 6rem;
+  overflow-x: hidden;
 }
 
 .request-us-container {
@@ -1532,7 +1533,6 @@ textarea:focus {
   align-items: center;
   gap: 4rem;
   margin: 4rem 0;
-  padding: 0 2rem;
 }
 
 .request-us-header {
